--- a/test/index.html
+++ b/test/index.html
@@ -6,6 +6,6 @@
     <title>react-pdf test page</title>
   </head>
   <body>
-    <div id="react-container"></div>
+    <div id="react-root"></div>
   </body>
 </html>
