--- a/sample/parcel/index.html
+++ b/sample/parcel/index.html
@@ -6,7 +6,7 @@
     <title>react-pdf sample page</title>
   </head>
   <body>
-    <div id="react-container"></div>
+    <div id="react-root"></div>
     <script src="index.jsx"></script>
   </body>
 </html>
