Convert sample suites to TypeScript (#1450)

--- a/sample/parcel/index.html
+++ b/sample/parcel/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <div id="react-root"></div>
-    <script src="index.jsx"></script>
+    <script src="index.tsx"></script>
   </body>
 </html>
